Add goal-based learning and natural planning model

--- a/Contents/abbrievations.tex
+++ b/Contents/abbrievations.tex
@@ -28,6 +28,7 @@
 \acro{vs}[vs.]{versus}
 \acro{freq}[freq.]{frequency}
 \acro{st}[s.t.]{subject to}
+\acro{SOTA}{state of the art}
 
 \acro{iid}[i.i.d.]{independent \& identically distributed}
 \acro{LSI}{linear shift invariant}
@@ -104,6 +105,7 @@
 \acro{A3C}{Asynchronous advantage actor-critic}
 \acro{SAC}{Soft actor-critic}
 \acro{DQN}{Deep Q-learning}
+\acro{DDPG}{Deep Deterministic Policy Gradients}
 \acro{DDP}{Differential Dynamic Programming}
 \acro{dagger}[DAgger]{Dataset Aggregation}
 \acro{CEM}{Cross-entropy Method}
@@ -119,8 +121,13 @@
 \acro{MaxEnt}{Maximum Entropy}
 \acro{MAML}{Model-Agnostic Meta-Learning}
 \acro{OPE}{Off-policy evaluation}
-\acro{LSTD}{Least-squares temporal difference}
-\acro{LSPI}{Least-squares policy iteration}
+\acro{LSTD}{Least-squares Temporal Difference}
+\acro{LSPI}{Least-squares Policy Iteration}
+\acro{HER}{Hindsight Experience Replay}
+\acro{UVFA}{Universal Value Function Approximators}
+\acro{LfD}{Learning from Demonstration}
+\acro{IL}{Imitation Learning}
+\acro{VIL}{Visual Imitation Learning}
 
 % Computer vision related
 \acro{DPM}{Deformable Part Model}
