--- a/Contents/bibliography.bib
+++ b/Contents/bibliography.bib
@@ -18,6 +18,7 @@
 @STRING{iros    = {Proc.~of the IEEE/RSJ Int.~Conf.~on Intelligent Robots and Systems (IROS)} }
 @STRING{wcica	= {Proc.~of the World Congress on Intelligent Control and Automation (WCICA)} }
 @STRING{NeurIPS	= {Proc.~of the Conf.~on Neural Information Processing Systems (NeurIPS)} }
+@STRING{corl	= {Proc.~of the Conf.~on Robot Learning (CoRL} }
 
 @STRING{ijars   = {Int.~Journal of Advanced Robotic Systems (IJARS} }
 @STRING{ijnc	= {Int.~Journal of Natural Computing} }
@@ -70,7 +71,7 @@
 	publisher={Emerald Group Publishing Limited}
 }
 @inproceedings{ross2011ais,
-	title={A reduction of imitation learning and structured prediction to no-regret online learning},
+	title={A Reduction of Imitation Learning and Structured Prediction to No-regret Online Learning},
 	author={Ross, St{\'e}phane and Gordon, Geoffrey and Bagnell, Drew},
 	booktitle={Proceedings of the Fourteenth International Conference on Artificial Intelligence and Statistics},
 	pages={627--635},
@@ -78,7 +79,7 @@
 	organization={ Workshop and Conference Proceedings}
 }
 @article{williams1992jml,
-	title={Simple statistical gradient-following algorithms for connectionist reinforcement learning},
+	title={Simple Statistical Gradient-following Algorithms for Connectionist Reinforcement Learning},
 	author={Williams, Ronald J},
 	journal=jml,
 	volume={8},
@@ -88,7 +89,7 @@
 	publisher={Springer}
 }
 @article{peters2008nn,
-	title={Reinforcement learning of motor skills with policy gradients},
+	title={Reinforcement Learning of Motor Skills with Policy Gradients},
 	author={Peters, Jan and Schaal, Stefan},
 	journal={Neural Networks},
 	volume={21},
@@ -98,7 +99,7 @@
 	publisher={Elsevier}
 }
 @inproceedings{schulman2015icml,
-	title={Trust region policy optimization},
+	title={Trust Region Policy Optimization},
 	author={Schulman, John and Levine, Sergey and Abbeel, Pieter and Jordan, Michael and Moritz, Philipp},
 	booktitle=icml,
 	pages={1889--1897},
@@ -106,7 +107,7 @@
 	organization={PMLR}
 }
 @inproceedings{levine2013icml,
-	title={Guided policy search},
+	title={Guided Policy Search},
 	author={Levine, Sergey and Koltun, Vladlen},
 	booktitle=icml,
 	pages={1--9},
@@ -114,13 +115,13 @@
 	organization={PMLR}
 }
 @article{schulman2017proximal,
-	title={Proximal policy optimization algorithms},
+	title={Proximal Policy Optimization Algorithms},
 	author={Schulman, John and Wolski, Filip and Dhariwal, Prafulla and Radford, Alec and Klimov, Oleg},
 	journal={arXiv preprint arXiv:1707.06347},
 	year={2017}
 }
 @inproceedings{thomas2014icml,
-	title={Bias in natural actor-critic algorithms},
+	title={Bias in Natural Actor-Critic Algorithms},
 	author={Thomas, Philip},
 	booktitle=icml,
 	pages={441--448},
@@ -128,7 +129,7 @@
 	organization={PMLR}
 }
 @article{gu2016q,
-	title={Q-prop: Sample-efficient policy gradient with an off-policy critic},
+	title={Q-Prop: Sample-efficient Policy Gradient with an Off-policy Critic},
 	author={Gu, Shixiang and Lillicrap, Timothy and Ghahramani, Zoubin and Turner, Richard E and Levine, Sergey},
 	journal={arXiv preprint arXiv:1611.02247},
 	year={2016}
@@ -141,7 +142,7 @@
 	year={1999}
 }
 @inproceedings{mnih2016icml,
-	title={Asynchronous methods for deep reinforcement learning},
+	title={Asynchronous methods for Deep Reinforcement Learning},
 	author={Mnih, Volodymyr and Badia, Adria Puigdomenech and Mirza, Mehdi and Graves, Alex and Lillicrap, Timothy and Harley, Tim and Silver, David and Kavukcuoglu, Koray},
 	booktitle=icml,
 	pages={1928--1937},
@@ -218,7 +219,7 @@
 @inproceedings{nagabandi2020deep,
 	title={Deep dynamics models for learning dexterous manipulation},
 	author={Nagabandi, Anusha and Konolige, Kurt and Levine, Sergey and Kumar, Vikash},
-	booktitle={Conference on Robot Learning},
+	booktitle=corl,
 	pages={1101--1112},
 	year={2020},
 	organization={PMLR}
@@ -316,7 +317,7 @@
 	organization={PMLR}
 }
 @article{lillicrap2015continuous,
-	title={Continuous control with deep reinforcement learning},
+	title={Continuous Control with Deep Reinforcement Learning},
 	author={Lillicrap, Timothy P and Hunt, Jonathan J and Pritzel, Alexander and Heess, Nicolas and Erez, Tom and Tassa, Yuval and Silver, David and Wierstra, Daan},
 	journal={arXiv preprint arXiv:1509.02971},
 	year={2015}
@@ -747,7 +748,7 @@
 @inproceedings{james2017transferring,
 	title={Transferring end-to-end visuomotor control from simulation to real world for a multi-stage task},
 	author={James, Stephen and Davison, Andrew J and Johns, Edward},
-	booktitle={Conference on Robot Learning},
+	booktitle=corl,
 	pages={334--343},
 	year={2017},
 	organization={PMLR}
@@ -952,7 +953,7 @@
 	organization={SPIE}
 }
 @article{bekiroglu2011assessing,
-	title={Assessing grasp stability based on learning and haptic data},
+	title={Assessing Grasp Stability Based on Learning and Haptic Data},
 	author={Bekiroglu, Yasemin and Laaksonen, Janne and Jorgensen, Jimmy Alison and Kyrki, Ville and Kragic, Danica},
 	journal={IEEE Transactions on Robotics},
 	volume={27},
@@ -962,7 +963,7 @@
 	publisher={IEEE}
 }
 @inproceedings{li2014learning,
-	title={Learning of grasp adaptation through experience and tactile sensing},
+	title={Learning of Grasp Adaptation Through Experience and Tactile Sensing},
 	author={Li, Miao and Bekiroglu, Yasemin and Kragic, Danica and Billard, Aude},
 	booktitle=iros,
 	pages={3339--3346},
@@ -970,7 +971,7 @@
 	organization={IEEE}
 }
 @inproceedings{handa2020dexpilot,
-	title={Dexpilot: Vision-based teleoperation of dexterous robotic hand-arm system},
+	title={DexPilot: Vision-based Teleoperation of Dexterous Robotic Hand-arm System},
 	author={Handa, Ankur and Van Wyk, Karl and Yang, Wei and Liang, Jacky and Chao, Yu-Wei and Wan, Qian and Birchfield, Stan and Ratliff, Nathan and Fox, Dieter},
 	booktitle=icra,
 	pages={9164--9170},
@@ -978,22 +979,22 @@
 	organization={IEEE}
 }
 @inproceedings{finn2017one,
-	title={One-shot visual imitation learning via meta-learning},
+	title={One-shot Visual Imitation Learning via Meta-Learning},
 	author={Finn, Chelsea and Yu, Tianhe and Zhang, Tianhao and Abbeel, Pieter and Levine, Sergey},
-	booktitle={Conference on Robot Learning},
+	booktitle=corl,
 	pages={357--368},
 	year={2017},
 	organization={PMLR}
 }
 @article{sharma2019third,
-	title={Third-person visual imitation learning via decoupled hierarchical controller},
+	title={Third-person Visual Imitation Learning via Decoupled Hierarchical Controller},
 	author={Sharma, Pratyusha and Pathak, Deepak and Gupta, Abhinav},
 	journal=NeurIPS,
 	volume={32},
 	year={2019}
 }
 @article{kleeberger2020survey,
-	title={A survey on learning-based robotic grasping},
+	title={A Survey on Learning-based Robotic Grasping},
 	author={Kleeberger, Kilian and Bormann, Richard and Kraus, Werner and Huber, Marco F},
 	journal={Current Robotics Reports},
 	volume={1},
@@ -1003,7 +1004,7 @@
 	publisher={Springer}
 }
 @article{bohg2013data,
-	title={Data-driven grasp synthesis—a survey},
+	title={Data-driven Grasp Synthesis—A Survey},
 	author={Bohg, Jeannette and Morales, Antonio and Asfour, Tamim and Kragic, Danica},
 	journal={IEEE Transactions on robotics},
 	volume={30},
@@ -1013,7 +1014,7 @@
 	publisher={IEEE}
 }
 @article{arulkumaran2017deep,
-	title={Deep reinforcement learning: A brief survey},
+	title={Deep Reinforcement Learning: A Brief Survey},
 	author={Arulkumaran, Kai and Deisenroth, Marc Peter and Brundage, Miles and Bharath, Anil Anthony},
 	journal={IEEE Signal Processing Magazine},
 	volume={34},
@@ -1023,13 +1024,13 @@
 	publisher={IEEE}
 }
 @article{li2017deep,
-	title={Deep reinforcement learning: An overview},
+	title={Deep Reinforcement Learning: An Overview},
 	author={Li, Yuxi},
 	journal={arXiv preprint arXiv:1701.07274},
 	year={2017}
 }
 @article{kober2013reinforcement,
-	title={Reinforcement learning in robotics: A survey},
+	title={Reinforcement Learning in Robotics: A Survey},
 	author={Kober, Jens and Bagnell, J Andrew and Peters, Jan},
 	journal={The International Journal of Robotics Research},
 	volume={32},
@@ -1039,7 +1040,7 @@
 	publisher={SAGE Publications Sage UK: London, England}
 }
 @article{singh2021reinforcement,
-	title={Reinforcement learning in robotic applications: a comprehensive survey},
+	title={Reinforcement Learning in Robotic Applications: A Comprehensive Survey},
 	author={Singh, Bharat and Kumar, Rajesh and Singh, Vinay Pratap},
 	journal={Artificial Intelligence Review},
 	pages={1--46},
@@ -1047,7 +1048,7 @@
 	publisher={Springer}
 }
 @inproceedings{yahya2017collective,
-	title={Collective robot reinforcement learning with distributed asynchronous guided policy search},
+	title={Collective Robot Reinforcement Learning with Distributed Asynchronous Guided Policy Search},
 	author={Yahya, Ali and Li, Adrian and Kalakrishnan, Mrinal and Chebotar, Yevgen and Levine, Sergey},
 	booktitle={2017 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS)},
 	pages={79--86},
@@ -1556,13 +1557,6 @@
 	year={2021},
 	note = {Accessed: 2022/08/24}
 }
-@misc{gordic2021how,
-	author={Gordić, Aleksa},
-	title = {How to get started with Graph Machine Learning},
-	howpublished = {\url{https://gordicaleksa.medium.com/how-to-get-started-with-graph-machine-learning-afa53f6f963a}},
-	year={2021},
-	note = {Accessed: 2022/08/24}
-}
 @article{lin2022efficient,
 	title={Efficient and interpretable robot manipulation with graph neural networks},
 	author={Lin, Yixin and Wang, Austin S and Undersander, Eric and Rai, Akshara},
@@ -1651,20 +1645,20 @@
 	year={2020}
 }
 @inproceedings{huang2017arbitrary,
-	title={Arbitrary style transfer in real-time with adaptive instance normalization},
+	title={Arbitrary Style Transfer in Real-time with Adaptive Instance Normalization},
 	author={Huang, Xun and Belongie, Serge},
 	booktitle={Proceedings of the IEEE international conference on computer vision},
 	pages={1501--1510},
 	year={2017}
 }
 @article{ulyanov2016texture,
-	title={Texture networks: Feed-forward synthesis of textures and stylized images},
+	title={Texture Networks: Feed-forward Synthesis of Textures and Stylized Images},
 	author={Ulyanov, Dmitry and Lebedev, Vadim and Vedaldi, Andrea and Lempitsky, Victor},
 	journal={arXiv preprint arXiv:1603.03417},
 	year={2016}
 }
 @inproceedings{ioffe2015batch,
-	title={Batch normalization: Accelerating deep network training by reducing internal covariate shift},
+	title={Batch Normalization: Accelerating Deep Network Training by Reducing Internal Covariate Shift},
 	author={Ioffe, Sergey and Szegedy, Christian},
 	booktitle={International conference on machine learning},
 	pages={448--456},
@@ -1672,13 +1666,13 @@
 	organization={PMLR}
 }
 @article{dumoulin2016learned,
-	title={A learned representation for artistic style},
+	title={A Learned Representation for Artistic Style},
 	author={Dumoulin, Vincent and Shlens, Jonathon and Kudlur, Manjunath},
 	journal={arXiv preprint arXiv:1610.07629},
 	year={2016}
 }
 @article{karras2021alias,
-	title={Alias-free generative adversarial networks},
+	title={Alias-free Generative Adversarial Networks},
 	author={Karras, Tero and Aittala, Miika and Laine, Samuli and H{\"a}rk{\"o}nen, Erik and Hellsten, Janne and Lehtinen, Jaakko and Aila, Timo},
 	journal=NeurIPS,
 	volume={34},
@@ -1714,13 +1708,13 @@
 	organization={PMLR}
 }
 @article{liu2018darts,
-	title={DARTS: Differentiable architecture search},
+	title={DARTS: Differentiable Architecture Search},
 	author={Liu, Hanxiao and Simonyan, Karen and Yang, Yiming},
 	journal={arXiv preprint arXiv:1806.09055},
 	year={2018}
 }
 @inproceedings{shrivastava2017learning,
-	title={Learning from simulated and unsupervised images through adversarial training},
+	title={Learning from Simulated and Unsupervised Images Through Adversarial Training},
 	author={Shrivastava, Ashish and Pfister, Tomas and Tuzel, Oncel and Susskind, Joshua and Wang, Wenda and Webb, Russell},
 	booktitle=cvpr,
 	pages={2107--2116},
@@ -1733,14 +1727,14 @@
 	year={2020}
 }
 @inproceedings{bousmalis2017unsupervised,
-	title={Unsupervised pixel-level domain adaptation with generative adversarial networks},
+	title={Unsupervised Pixel-level Domain Adaptation with Generative Adversarial Networks},
 	author={Bousmalis, Konstantinos and Silberman, Nathan and Dohan, David and Erhan, Dumitru and Krishnan, Dilip},
 	booktitle=cvpr,
 	pages={3722--3731},
 	year={2017}
 }
 @inproceedings{sun2016return,
-	title={Return of frustratingly easy domain adaptation},
+	title={Return of Frustratingly Easy Domain Adaptation},
 	author={Sun, Baochen and Feng, Jiashi and Saenko, Kate},
 	booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
 	volume={30},
@@ -1748,7 +1742,7 @@
 	year={2016}
 }
 @inproceedings{chebotar2019closing,
-	title={Closing the sim-to-real loop: Adapting simulation randomization with real world experience},
+	title={Closing the Sim-to-Real Loop: Adapting Simulation Randomization with Real World Experience},
 	author={Chebotar, Yevgen and Handa, Ankur and Makoviychuk, Viktor and Macklin, Miles and Issac, Jan and Ratliff, Nathan and Fox, Dieter},
 	booktitle=icra,
 	pages={8973--8979},
@@ -1756,12 +1750,147 @@
 	organization={IEEE}
 }
 @inproceedings{zhao2020sim,
-	title={Sim-to-Real Transfer in Deep Reinforcement Learning for Robotics: a Survey},
+	title={Sim-to-Real Transfer in Deep Reinforcement Learning for Robotics: A Survey},
 	author={Zhao, Wenshuai and Queralta, Jorge Pe{\~n}a and Westerlund, Tomi},
 	booktitle=ssci,
 	pages={737--744},
 	year={2020},
 	organization={IEEE}
+}
+@article{andrychowicz2017hindsight,
+	title={Hindsight Experience Replay},
+	author={Andrychowicz, Marcin and Wolski, Filip and Ray, Alex and Schneider, Jonas and Fong, Rachel and Welinder, Peter and McGrew, Bob and Tobin, Josh and Pieter Abbeel, OpenAI and Zaremba, Wojciech},
+	journal=NeurIPS,
+	volume={30},
+	year={2017}
+}
+@inproceedings{schaul2015universal,
+	title={Universal Value Function Approximators},
+	author={Schaul, Tom and Horgan, Daniel and Gregor, Karol and Silver, David},
+	booktitle=icml,
+	pages={1312--1320},
+	year={2015},
+	organization={PMLR}
+}
+@book{thrun2012learning,
+	title={Learning to Learn},
+	author={Thrun, Sebastian and Pratt, Lorien},
+	year={2012},
+	publisher={Springer Science \& Business Media}
+}
+@article{lopez2017gradient,
+	title={Gradient Episodic Memory for Continual Learning},
+	author={Lopez-Paz, David and Ranzato, Marc'Aurelio},
+	journal=NeurIPS,
+	volume={30},
+	year={2017}
+}
+@article{billard2019trends,
+	title={Trends and Challenges in Robot Manipulation},
+	author={Billard, Aude and Kragic, Danica},
+	journal={Science},
+	volume={364},
+	number={6446},
+	pages={eaat8414},
+	year={2019},
+	publisher={American Association for the Advancement of Science}
+}
+@inproceedings{yang2015robot,
+	title={Robot Learning Manipulation Action Plans by Watching” Unconstrained Videos from the World Wide Web},
+	author={Yang, Yezhou and Li, Yi and Fermuller, Cornelia and Aloimonos, Yiannis},
+	booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+	volume={29},
+	number={1},
+	year={2015}
+}
+@article{zhang2019robot,
+	title={Robot learning and execution of collaborative manipulation plans from YouTube cooking videos},
+	author={Zhang, Hejia and Nikolaidis, Stefanos},
+	journal={arXiv preprint arXiv:1911.10686},
+	year={2019}
+}
+@book{allen2002getting,
+	title={Getting Things Done},
+	author={Allen, David},
+	year={2002},
+	publisher={Piatkus Books},
+	ISBN={9780349408941}
+}
+@book{asimov2004robot,
+	title={I, robot},
+	author={Asimov, Isaac},
+	volume={1},
+	year={2004},
+	publisher={Spectra}
+}
+@article{toussaint2018differentiable,
+	title={Differentiable Physics and Stable Modes for Tool-Use and Manipulation Planning},
+	author={Toussaint, Marc A and Allen, Kelsey Rebecca and Smith, Kevin A and Tenenbaum, Joshua B},
+	year={2018},
+	publisher={Robotics: Science and Systems Foundation}
+}
+@inproceedings{young2020visual,
+	title={Visual imitation made easy},
+	author={Young, Sarah and Gandhi, Dhiraj and Tulsiani, Shubham and Gupta, Abhinav and Abbeel, Pieter and Pinto, Lerrel},
+	booktitle={Conference on Robot Learning (CoRL)},
+	year={2020}
+}
+@inproceedings{tykal2016incrementally,
+	title={Incrementally assisted kinesthetic teaching for programming by demonstration},
+	author={Tykal, Martin and Montebelli, Alberto and Kyrki, Ville},
+	booktitle={2016 11th ACM/IEEE International Conference on Human-Robot Interaction (HRI)},
+	pages={205--212},
+	year={2016},
+	organization={IEEE}
+}
+@inproceedings{sieb2020graph,
+	title={Graph-structured Visual Imitation},
+	author={Sieb, Maximilian and Xian, Zhou and Huang, Audrey and Kroemer, Oliver and Fragkiadaki, Katerina},
+	booktitle={Conference on Robot Learning},
+	pages={979--989},
+	year={2020},
+	organization={PMLR}
+}
+@inproceedings{pathak2018zero,
+	title={Zero-shot Visual Imitation},
+	author={Pathak, Deepak and Mahmoudieh, Parsa and Luo, Guanghao and Agrawal, Pulkit and Chen, Dian and Shentu, Yide and Shelhamer, Evan and Malik, Jitendra and Efros, Alexei A and Darrell, Trevor},
+	booktitle=cvpr,
+	pages={2050--2053},
+	year={2018}
+}
+@inproceedings{zhang2018deep,
+	title={Deep imitation learning for complex manipulation tasks from virtual reality teleoperation},
+	author={Zhang, Tianhao and McCarthy, Zoe and Jow, Owen and Lee, Dennis and Chen, Xi and Goldberg, Ken and Abbeel, Pieter},
+	booktitle=icra,
+	pages={5628--5635},
+	year={2018},
+	organization={IEEE}
+}
+@article{dasari2020transformers,
+	title={Transformers for One-Shot Visual Imitation},
+	author={Dasari, Sudeep and Gupta, Abhinav},
+	journal={arXiv preprint arXiv:2011.05970},
+	year={2020}
+}
+@article{zhou2021manipulator,
+	title={Manipulator-independent representations for visual imitation},
+	author={Zhou, Yuxiang and Aytar, Yusuf and Bousmalis, Konstantinos},
+	journal={arXiv preprint arXiv:2103.09016},
+	year={2021}
+}
+@inproceedings{mandi2022towards,
+	title={Towards more generalizable one-shot visual imitation learning},
+	author={Mandi, Zhao and Liu, Fangchen and Lee, Kimin and Abbeel, Pieter},
+	booktitle=icra,
+	pages={2434--2444},
+	year={2022},
+	organization={IEEE}
+}
+@article{smith2019avid,
+	title={AVID: Learning Multi-Stage Tasks via Pixel-Level Translation of Human Videos},
+	author={Smith, Laura and Dhawan, Nikita and Zhang, Marvin and Abbeel, Pieter and Levine, Sergey},
+	journal={arXiv preprint arXiv:1912.04443},
+	year={2019}
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
