--- a/Contents/continual-learning.tex
+++ b/Contents/continual-learning.tex
@@ -1,2 +1,10 @@
 % !TeX spellcheck = en_US
 \chapter{Continual Learning}
+
+\todo{Check references below}
+
+\section{References}
+\begin{itemize}
+	\item \citeaustitle{thrun2012learning}. Chapter 8: LIFELONG LEARNING ALGORITHMS
+	\item \citeaustitle{lopez2017gradient}
+\end{itemize}
