--- a/Contents/dl.tex
+++ b/Contents/dl.tex
@@ -61,7 +61,7 @@ The high-level idea is such, when interpolation in the latent space may lead to 
 \end{itemize}
 
 \section{Image-to-Image Translation}
-Image-to-image translation is a class of computer vision problems where the goal is to learn the mapping between an input image and an output image. Recent approaches utilize \ac{GAN}. It has various applications \cite{isola2017image, zhu2017unpaired}, \eg:
+Image-to-image translation is a class of \ac{CV} problems where the goal is to learn the mapping between an input image and an output image. Recent approaches utilize \ac{GAN}. It has various applications \cite{isola2017image, zhu2017unpaired}, \eg:
 \begin{itemize}
 	\item Domain adaptation
 	\item Semantic label $\leftrightarrow$ photo
