--- a/Contents/meta-learning.tex
+++ b/Contents/meta-learning.tex
@@ -1,6 +1,8 @@
 % !TeX spellcheck = en_US
 \chapter{Meta-Learning}
 
+\todo{Read a bit from the begining} \citeaustitle{thrun2012learning}
+
 \section{Scaffolding}
 \textit{Scaffolding} is a term that commonly used in the construction field, but also has a relation to infant's learning process. Scaffolding is a temporary structure that supports the construction, maintenance of a large building \href{https://en.wikipedia.org/wiki/Scaffolding}{(wiki)}. In the context of learning, it implies the structured assistance, or guidance, for better accomplishment of new skills and tasks. As the learner's \textit{autonomy} (learning abilities) increases, the support decrease accordingly . \cite{parentlab2019ccaffolding, zaadnoordijk2020next}
 
