--- a/Contents/network-structures.tex
+++ b/Contents/network-structures.tex
@@ -528,7 +528,7 @@ Source: \href{https://youtu.be/p2aqXKfRXEA}{CS224W}
 	\item \href{https://youtu.be/bA261BF0bdk}{Siraj Raval YouTube}
 	\item \citeaustitle{sanchez2021a}
 	\item \citeaustitle{daigavane2021understanding}
-	\item \citeaustitle{gordic2021how}
+	\item \href{https://gordicaleksa.medium.com/how-to-get-started-with-graph-machine-learning-afa53f6f963a}{How to get started with Graph Machine Learning - Aleksa Gordić}
 \end{itemize}
 
 There are so many current open problems for research (2022)
