--- a/Contents/rl-overview.tex
+++ b/Contents/rl-overview.tex
@@ -96,6 +96,13 @@ There are many methods / algorithms with their trade-offs and assumptions:
 \end{itemize}
 \tabref{tab:RL-algors} gives an overview and comparison between algorithms.
 
+\section{Current State of the Art}
+Some current \ac{SOTA} \ac{RL} \ac{algor}s are:
+\begin{itemize}
+	\item \ac{DQN}: model-free \ac{RL} for discrete action spaces \cite{mnih2015human}
+	\item \ac{DDPG}: model-free \ac{RL} for continuous action spaces \cite{lillicrap2015continuous}
+\end{itemize}
+
 \section{Challenges}
 \begin{itemize}
 	\item Humans can learn incredibly quickly
