--- a/Contents/robotics-research-proposal.tex
+++ b/Contents/robotics-research-proposal.tex
@@ -26,6 +26,8 @@ Prior works on robotic manipulators were limited on their utilization of tactile
 
 It's still challenging to generalize and apply \ac{RL} to different robotic manipulator's tasks. In general, \ac{RL} did make a convincing case about its potential to surpass human's ability in some specific applications, \eg, playing Go, chess. However, in other fields, practical applications are yet scattered and limited. For robotic manipulators, current focuses are still around object picking and handling tasks \cite{singh2021reinforcement}. One of the major causes for this situation is the current gap in generalization and transfer learning. Directions for improvements are meta-learning, multi-task learning, \etc \cite{kober2013reinforcement}.
 
+Robot manipulation \cite{billard2019trends}
+
 \subsection{Approaches and Research Contributions}
 The progress I wish to work towards concerns robotic collective learning for collaborative tasks. For example, a system of multiple robot arms learning to play 2v2 table tennis, pack an item or cook. Building up towards this progress, I intend to work and gain more experiences on the following problems:
 
