--- a/robotics.tex
+++ b/robotics.tex
@@ -34,6 +34,7 @@ fleqn
 	\include{Contents/probabilistic-robotics.tex}
 	\include{Contents/robotics-gnn.tex}
 	\include{Contents/sim2real.tex}
+	\include{Contents/natural-planning-model.tex}
 	\include{Contents/robotics-research-proposal.tex}
 	
 	\backmatter
