--- a/RL_notes.tex
+++ b/RL_notes.tex
@@ -42,6 +42,7 @@ fleqn
 \include{Contents/transfer-and-multitask-learning.tex}
 \include{Contents/meta-learning.tex}
 \include{Contents/continual-learning.tex}
+\include{Contents/goal-based-RL.tex}
 \include{Contents/rl-robotics.tex}
 \include{Contents/rl-challenges-open-probs.tex}
 \include{Contents/technical-tools-RL.tex}
