--- a/Contents/bibliography.bib
+++ b/Contents/bibliography.bib
@@ -1892,5 +1892,24 @@
 	journal={arXiv preprint arXiv:1912.04443},
 	year={2019}
 }
+@article{mcdermott1992robot,
+	title={Robot Planning},
+	author={McDermott, Drew},
+	journal={AI magazine},
+	volume={13},
+	number={2},
+	pages={55--55},
+	year={1992}
+}
+@article{brooks1982symbolic,
+	title={Symbolic error analysis and robot planning},
+	author={Brooks, Rodney A},
+	journal={The International Journal of Robotics Research},
+	volume={1},
+	number={4},
+	pages={29--78},
+	year={1982},
+	publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
 
 @Comment{jabref-meta: databaseType:bibtex;}
