--- a/Contents/natural-planning-model.tex
+++ b/Contents/natural-planning-model.tex
@@ -20,6 +20,11 @@ The arm of a small child has limitation in what it can lift. But as the child gr
 
 This chapter proposes a robotic planning framework that inspired by this natural planning model. The following sections cover describes the above steps and their corresponding existing robotic frameworks.
 
+\section{Robot Planning}
+\todo{}
+\citeaustitle{mcdermott1992robot}
+\citeaustitle{brooks1982symbolic}
+
 \section{Purpose and Principles}
 Purposes are the great answers to the "WHY" questions. We eat and drink to survive. We go to college in search for knowledge and skills. We travel and go out with our friends to relax and enjoy our lives. Well, for know, the simple yet sufficient "WHY" for robots is the fact that we, humans, are lazy and want our lives to be more comfortable :)
 
@@ -82,4 +87,18 @@ Identifying and Taking Action
 Goal-based policy learning
 \begin{itemize}
 	\item 
+\end{itemize}
+
+\section{References}
+\todo{}
+\begin{itemize}
+	\item Robot planning
+	\begin{itemize}
+		\item \citeaustitle{mcdermott1992robot}
+		\item \citeaustitle{brooks1982symbolic}
+	\end{itemize}
+	\item Goal imagining mechanism: wide range of works
+	\item Goal-conditioned learning:
+	\item Learning action plan
+	\item Primitive motion
 \end{itemize}
