--- a/Contents/bibliography.bib
+++ b/Contents/bibliography.bib
@@ -2012,5 +2012,27 @@
 	year={1994},
 	publisher={Wiley Online Library}
 }
+@misc{pineau2018reproducible,
+	author={Pineau, Joelle},
+	title = {Reproducible, Reusable, and Robust Reinforcement Learning},
+	howpublished = {\url{https://youtu.be/Kee4ch3miVA}},
+	year={2018},
+	note = {Accessed: 2022/11/18},
+	journal = NeurIPS,
+}
+@misc{schulman2017nuts,
+	author={Schulman, John},
+	title = {Nuts and Bolts of Deep RL Experimentation},
+	howpublished = {\url{https://youtu.be/8EcdaCk9KaQ}},
+	year={2017},
+	note = {Accessed: 2022/11/18},
+}
+@article{pfaff2020learning,
+	title={Learning Mesh-Based Simulation with Graph Networks},
+	author={Pfaff, Tobias and Fortunato, Meire and Sanchez-Gonzalez, Alvaro and Battaglia, Peter W},
+	journal={arXiv preprint arXiv:2010.03409},
+	year={2020}
+}
+
 
 @Comment{jabref-meta: databaseType:bibtex;}
