--- a/Contents/network-structures.tex
+++ b/Contents/network-structures.tex
@@ -515,12 +515,19 @@ Source: \citeaustitle{sanchez2021a}
 	\item The more type of message passing the model has, the better the performance is.
 \end{itemize}
 
+\note
+\begin{itemize}
+	\item Graph is very scalable. Interaction between edges and nodes in a very large graph can be trained within a smaller graph \cite{pfaff2020learning}
+	\item Take advantage of inductive biases (\href{https://youtu.be/dtPcqEnLvqc}{Learning physical simulation with graph network})
+\end{itemize}
+
 \subsection{Application}
 Source: \href{https://youtu.be/p2aqXKfRXEA}{CS224W}
 \begin{itemize}
 	\item PinSAGE: \ac{GNN} for Recommendation systems: nodes are users, products. Based on other users' interactions with some products, predict whether one user would interest in a new product.
 	\item Decagon: heterogeneous \ac{GNN} for drug prediction
 	\item Goal-directed generation: GCPN for molecule generation
+	\item Mesh-based simulation \cite{pfaff2020learning}
 \end{itemize}
 
 \subsection{References}
