--- a/RL_notes.tex
+++ b/RL_notes.tex
@@ -46,6 +46,7 @@ fleqn
 \include{Contents/rl-robotics.tex}
 \include{Contents/rl-challenges-open-probs.tex}
 \include{Contents/technical-tools-RL.tex}
+\include{Contents/tips-tricks-RL.tex}
 \include{Contents/rl-research-proposal.tex}
 	
 \backmatter
