--- a/learning-notes.sty
+++ b/learning-notes.sty
@@ -176,6 +176,9 @@ includeheadfoot
 
 \usepackage{enumitem}
 \setlist{nosep}
+\newlist{todolist}{itemize}{2}
+\setlist[todolist]{label=$\square$}
+
 
 % --------------------------------------------------------------------------
 %	Macros and Functions
