--- a/robotics.tex
+++ b/robotics.tex
@@ -1,10 +1,10 @@
 % !TeX spellcheck = en_US
 \documentclass[
-english,
-openany,
-draft = false,
-twoside = true,
-fleqn
+	english,
+	openany,
+	draft = false,
+	twoside = true,
+	fleqn
 ]{scrbook}
 \usepackage{learning-notes}
 
@@ -36,6 +36,7 @@ fleqn
 	\include{Contents/sim2real.tex}
 	\include{Contents/natural-planning-model.tex}
 	\include{Contents/robotics-research-proposal.tex}
+	\include{Contents/technical-tools-robotics.tex}
 	
 	\backmatter
 	\pagenumbering{Roman}
