--- a/Contents/abbrievations.tex
+++ b/Contents/abbrievations.tex
@@ -128,6 +128,7 @@
 \acro{LfD}{Learning from Demonstration}
 \acro{IL}{Imitation Learning}
 \acro{VIL}{Visual Imitation Learning}
+\acro{HRL}{Hierarchical Reinforcement Learning}
 
 % Computer vision related
 \acro{DPM}{Deformable Part Model}
